CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV__c/validationRules/BeginDateWithin31DaysFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>BeginDateWithin31DaysFuture</fullName>
    <active>true</active>
    <description>Begin Date cannot be more than 31 days in the future</description>
    <errorConditionFormula>DTE_BEGIN_ACTV_PRIM__c &gt;  TODAY() +31</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_ACTV_PRIM__c</errorDisplayField>
    <errorMessage>Begin Date cannot be more than 31 days in the future</errorMessage>
</ValidationRule>