CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV__c/validationRules/Cannot_Update_IDN_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_IDN_Case</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( IDN_CASE__c )</errorConditionFormula>
    <errorDisplayField>IDN_CASE__c</errorDisplayField>
    <errorMessage>Cannot Update Case ID</errorMessage>
</ValidationRule>