CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV__c/validationRules/Cannot_Update_IDN_CLIENT.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_IDN_CLIENT</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(IDN_CLIENT__c )</errorConditionFormula>
    <errorDisplayField>IDN_CLIENT__c</errorDisplayField>
    <errorMessage>Cannot Update Client ID</errorMessage>
</ValidationRule>