CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV__c/validationRules/CDE_TYPE_ACTV_Cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>CDE_TYPE_ACTV_Cannot_be_edited</fullName>
    <active>true</active>
    <description>CDE_TYPE_ACTV Cannot be edited after record creation</description>
    <errorConditionFormula>AND(ISCHANGED(CDE_TYPE_ACTV__c),NOT(Is_CBMS_Data__c))</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_ACTV__c</errorDisplayField>
    <errorMessage>Primary Activity cannot be updated</errorMessage>
</ValidationRule>