CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV__c/validationRules/Effective_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Date_Validation</fullName>
    <active>true</active>
    <description>Effective End Date must be greater than Effective Begin Date.</description>
    <errorConditionFormula>DTE_BEGIN_ACTV_PRIM__c &gt;= DTE_END_ACTV_PRIM__c</errorConditionFormula>
    <errorDisplayField>DTE_END_ACTV_PRIM__c</errorDisplayField>
    <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
</ValidationRule>